--- a/src/app/shared/reports/horizontal-bar-chart/horizontal-bar-chart.component.html
+++ b/src/app/shared/reports/horizontal-bar-chart/horizontal-bar-chart.component.html
@@ -1,6 +1,6 @@
 <div class="content-chart horizontal-chart">
     <ngx-charts-bar-horizontal
-      scheme="forest"
+      [scheme]="_local.getTypeStyle()"
       legendTitle="Cargos"
       [results]="data"
       [gradient]="gradient"
