--- a/src/app/shared/reports/pie-chart/pie-chart.component.html
+++ b/src/app/shared/reports/pie-chart/pie-chart.component.html
@@ -1,6 +1,6 @@
 <div class="content-chart pie-chart">
     <ngx-charts-pie-chart
-      scheme="forest"
+      [scheme]="_local.getTypeStyle()"
       [results]="data"
       [gradient]="gradient"
       [legend]="showLegend"
