--- a/src/app/features/station/layout/layout.component.css
+++ b/src/app/features/station/layout/layout.component.css
@@ -34,6 +34,7 @@
     /* When the sidenav is not fixed, stretch the sidenav container to fill the available space. This
              causes `<mat-sidenav-content>` to act as our scrolling element for desktop layouts. */
     flex: 1;
+    height: 100vh;
     background: var(--background-color-b);
   }
   
@@ -45,7 +46,7 @@
   
   /*Set sidenav width*/
   
-  mat-sidenav {
+  mat-sidenav, mat-drawer {
     min-width: 240px !important;
     border-right: 1px solid var(--border-color);
     background: var(--background-color-a);
