--- a/src/app/features/station/layout/layout.component.html
+++ b/src/app/features/station/layout/layout.component.html
@@ -2,16 +2,20 @@
 
     <!-- Top navbar -->
     <mat-toolbar class="navbar">
-  
       <button mat-icon-button (click)="snav.toggle()">
         <mat-icon>menu</mat-icon>
       </button>
   
       <span class="navbar-spacer"></span>
-    
+      <button mat-icon-button (click)="togglePalette()">
+        <mat-icon>palette</mat-icon>
+      </button>
+      <button mat-icon-button (click)="changeMode()">
+        <mat-icon>{{lightMode?'light_mode':'dark_mode'}}</mat-icon>
+      </button>
       <button mat-button [matMenuTriggerFor]="userMenu">
         <mat-icon>person</mat-icon>
-        <span fxShow fxHide.xs>
+        <span fxShow>
           {{userName}}
         </span>
       </button>
@@ -30,59 +34,64 @@
       </mat-menu>
   
     </mat-toolbar>
-  
-    <mat-sidenav-container class="navbar-sidenav-container">
-      <!-- Side nav -->
-      <mat-sidenav #snav 
-                   [opened]="!mobileQuery.matches" 
-                   [mode]="mobileQuery.matches ? 'over' : 'side'"
-                   [fixedInViewport]="mobileQuery.matches" 
-                   fixedTopGap="56" 
-                   class="sidenav">
-  
-        <mat-nav-list>
-          <div class="container-title-eea" *ngIf="_local.getStation().name_inia_station; else skeletonTitle">
-            <p class="text-plain-secondary">{{_local.getStation().name_inia_station| uppercase}}</p>
+    <!-- Palette side bar -->
+    <mat-drawer-container class="navbar-sidenav-container">
+      <mat-drawer #drawerPalette class="sidenav" mode="over" position="end">
+        <app-item-menu-palette></app-item-menu-palette>
+      </mat-drawer>
+      <!-- Menu side bar -->
+      <mat-sidenav-container class="navbar-sidenav-container">
+        <!-- Side nav -->
+        <mat-sidenav #snav 
+                    [opened]="!mobileQuery.matches" 
+                    [mode]="mobileQuery.matches ? 'over' : 'side'"
+                    [fixedInViewport]="mobileQuery.matches" 
+                    fixedTopGap="56" 
+                    class="sidenav">
+    
+          <mat-nav-list>
+            <div class="container-title-eea" *ngIf="_local.getStation().name_inia_station; else skeletonTitle">
+              <p class="text-plain-secondary">{{_local.getStation().name_inia_station| uppercase}}</p>
+            </div>
+            <ng-template #skeletonTitle>
+              <app-skeleton width="100%" height="40px"></app-skeleton>
+            </ng-template>
+            <a mat-list-item class="font-color menu-item" [routerLink]="['./dashboard']" routerLinkActive="active">
+              <mat-icon mat-list-icon>
+                dashboard
+              </mat-icon>
+                <p mat-line> Panel principal  </p>
+            </a>
+    
+            <a mat-list-item class="font-color menu-item" [routerLink]="['./project/list']" routerLinkActive="active">
+              <mat-icon mat-list-icon>
+                business
+              </mat-icon>
+              <p mat-line> Proyectos </p>
+            </a>
+            
+            <a mat-list-item class="font-color menu-item" (click)="logout()">
+              <mat-icon mat-list-icon>exit_to_app</mat-icon>
+              <p mat-line> Cerrar sesión </p>
+            </a>
+    
+          </mat-nav-list>
+    
+        </mat-sidenav>
+    
+        <!-- Main content -->
+        <mat-sidenav-content class="sidenav-content">
+    
+          <div class="progress-bar-container">
+            <mat-progress-bar class="custom-mat-progress-bar" mode="indeterminate" *ngIf="spinnerService.visibility | async">
+            </mat-progress-bar>
           </div>
-          <ng-template #skeletonTitle>
-            <app-skeleton width="100%" height="40px"></app-skeleton>
-          </ng-template>
-          <a mat-list-item class="font-color menu-item" [routerLink]="['./dashboard']" routerLinkActive="active">
-            <mat-icon mat-list-icon>
-              dashboard
-            </mat-icon>
-              <p mat-line> Panel principal  </p>
-          </a>
-  
-          <a mat-list-item class="font-color menu-item" [routerLink]="['./project/list']" routerLinkActive="active">
-            <mat-icon mat-list-icon>
-              business
-            </mat-icon>
-            <p mat-line> Proyectos </p>
-          </a>
-          
-          <a mat-list-item class="font-color menu-item" (click)="logout()">
-            <mat-icon mat-list-icon>exit_to_app</mat-icon>
-            <p mat-line> Cerrar sesión </p>
-          </a>
-  
-        </mat-nav-list>
-  
-      </mat-sidenav>
-  
-      <!-- Main content -->
-      <mat-sidenav-content class="sidenav-content">
-  
-        <div class="progress-bar-container">
-          <mat-progress-bar class="custom-mat-progress-bar" mode="indeterminate" *ngIf="spinnerService.visibility | async">
-          </mat-progress-bar>
-        </div>
-  
-        <div class="ml-1 mr-1">
-          <router-outlet></router-outlet>
-        </div>
-  
-      </mat-sidenav-content>
-    </mat-sidenav-container>
-  
+    
+          <div class="ml-1 mr-1">
+            <router-outlet></router-outlet>
+          </div>
+    
+        </mat-sidenav-content>
+      </mat-sidenav-container>
+    </mat-drawer-container>
   </div>
