add first version

--- a/src/app/features/admin/layout/layout.component.html
+++ b/src/app/features/admin/layout/layout.component.html
@@ -70,13 +70,13 @@
             <p mat-line> Estaciones INIA</p>
           </a>
   
-          <a mat-list-item class="font-color menu-item" [routerLink]="['/main/10/projects']" routerLinkActive="active">
+          <a mat-list-item class="font-color menu-item" [routerLink]="['./projects']" routerLinkActive="active">
             <mat-icon mat-list-icon>
               business
             </mat-icon>
             <p mat-line> Proyectos </p>
           </a>
-          <a mat-list-item class="font-color menu-item" [routerLink]="['/main/10/facilitators']" routerLinkActive="active">
+          <a mat-list-item class="font-color menu-item" [routerLink]="['./facilitators']" routerLinkActive="active">
             <mat-icon mat-list-icon>
               people
             </mat-icon>
